kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argus-webhook
  labels:
    app: argus
spec:
  selector:
    app: argus
    component: webhook
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
